add present and trait
